welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: missing arguments for method monkeyTrouble in class monkeyTrouble;
follow this method with `_' if you want to treat it as a partially applied function
if (monkeyTrouble(aSmile,bSmile)= true) {return true}
    ^